[package]
name = "polymarket-insider-tracker"
version = "0.1.0"
edition = "2021"
description = "Real-time Insider Activity Tracker for Polymarket"
authors = [""]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
dotenv = "0.15"
ctrlc = "3.4"

[profile.release]
opt-level = 3
lto = true
